# nnsysident

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.py  singularity.def  slurm_job.py
nnsysident/datasets/: __init__.py  mouse_loaders.py  transforms.py
nnsysident/meis/: initial.py  ops.py
nnsysident/models/: cores.py  encoders.py  ensemble_models.py  legacy_model_functions.py  lurz_model_core  models.py  modulators.py  point_readout_preliminary.py  readouts.py  transfer_functions.py
nnsysident/tables/: bayesian.py  baysian.py  experiments.py  from_mei.py  mei.py  scoring.py
notebooks/: Analysis_of_query_images.ipynb  Bayes_Hypersearch_Demo.ipynb  DEI_models.ipynb  FileTreeSet_training_demo.ipynb  Generate_MEI_Demo_Konstantin.ipynb  Generating simulated data.ipynb  MEI-Transfer.ipynb  MEI.ipynb  Mouse_Example-Copy1.ipynb  Mouse_Example.ipynb  Plots_real.ipynb  Plots_real_iclr.ipynb  Plots_sim.ipynb  Simulate data from model.ipynb  Train on Allen.ipynb  Utilities.ipynb  Utilities_ICLR.ipynb  analyze_gaussian_readout.ipynb  collections_and_images.csv  data_tutorial.ipynb  experiments_example.ipynb  feat|scale: random init + learned - position: random ortho init|0 + learned + shared  gaussian_test.ipynb  gnn.ipynb  inshallah_notebook.ipynb  inter_area.ipynb  lastresort.ipynb  mei_demo.ipynb  mei_develop.ipynb  mei_newstart.ipynb  monkey.ipynb  mouse.ipynb  nnsysident_example_notebook.ipynb  nnvision_demo.ipynb  normalizing flows.ipynb  old_new_readout_comparisons.ipynb  playground.ipynb  preliminary.ipynb  prepare_data.ipynb  run.py  (+4 more)
(+6 files in other folders)
